Docs: Part B results (refactor done, device checks passed)
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>